# mtdna-foundation-model

./: .gitignore  .publish-config.yml  CLAUDE.md  LICENSE  PLAN.md  README.md  app.py  app_patho_reference.npz  app_reference.npz  dvc.yaml  mlflow.db  pyproject.toml  requirements.txt
.claude/: settings.json
configs/: data.yaml  finetuning_haplogroup.yaml  finetuning_haplogroup_gpu.yaml  finetuning_haplogroup_paper.yaml  finetuning_heteroplasmy.yaml  finetuning_heteroplasmy_paper.yaml  finetuning_pathogenicity.yaml  finetuning_pathogenicity_paper.yaml  model_small.yaml  pretraining_phase1.yaml  pretraining_phase2.yaml
docs/: 01_data_pipeline.md  02_tokenization.md  03_architecture.md  04_pretraining.md  05_finetuning_and_evaluation.md
mtdna_fm/: __init__.py
notebooks/: 01_data_exploration.ipynb  02_pretraining_analysis.ipynb  03_finetuning_results.ipynb  04_showcase.ipynb  build_notebook_02.py  build_notebook_03.py  build_notebook_04.py
paper/: README.md  check_obs4.py  check_overlap.py  check_table.py  cover_letter.md  download_labeled_mtdna.py  evaluate_haplogroup_finetune.py  fill_paper_numbers.py  finetune_gpu_colab.ipynb  gen_supplementary_table.py  inspect_npz.py  kmer_baseline.py  reproduce_all.sh  run_paper.sh  run_zeroshot_haplogroup.py  update_paper_finetune.py  update_paper_results.py  zenodo_osf_submission.md
reports/: blog-01-mtdna-biology.md  blog-02-existing-models-fail.md  blog-03-architecture.md  blog-04-cpu-training.md  blog-05-finetuning-failed.md  blog-06-no-pathogenicity-eval.md  blog-07-learnings.md  blog-08-achievements.md  day-00-kickoff-linkedin.txt  day-00-kickoff-x.txt  day-01-data.js  day-01-scaffold.md  day-02-data.js  day-03-data.js  day-04-data.js  day-05-data.js  day-10-x.txt  (+108 more)
(+85 files in other folders)
