[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtdna-fm"
version = "0.1.0"
description = "Foundation model for mitochondrial DNA with circular positional encoding and heteroplasmy-aware embeddings"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "dvc>=3.50.0",
    "mlflow>=2.12.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.4.0",
    "biopython>=1.83",
    "pandas>=2.2.0",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.22.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "ipykernel>=6.0",
    "gradio>=4.0",
    "umap-learn>=0.5.0",
    "matplotlib>=3.8.0",
    "plotly>=5.20.0",
]

[project.scripts]
mtdna-download   = "mtdna_fm.scripts.download:app"
mtdna-preprocess = "mtdna_fm.scripts.preprocess:app"
mtdna-train      = "mtdna_fm.scripts.train:app"
mtdna-finetune   = "mtdna_fm.scripts.finetune:app"
mtdna-evaluate   = "mtdna_fm.scripts.evaluate:app"

[tool.hatch.build.targets.wheel]
packages = ["mtdna_fm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mtdna_fm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (skipped in CI fast mode)",
    "integration: marks tests that require real data or network access",
]
